// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[JSON.AddButton] should match deep snapshot 1`] = `
<div>
  <button
    class="absolute h-2 -mt-0.5 first:-mt-1.5 group opacity-0 hover:opacity-100"
    style="margin-left: 4rem; width: calc(100% - 4rem); z-index: 3;"
  >
    <div
      class="absolute left-0 right-0 h-0.5 -translate-y-1/2 bg-slate-300 group-hover:bg-slate-400 group-active:bg-slate-500"
    />
    <div
      class="absolute left-1/2 -translate-x-1/2 -translate-y-1/2 border rounded-sm bg-white border-slate-300 group-hover:border-slate-400 group-active:border-slate-500"
    >
      <svg
        class=" fill-slate-300  group-hover:fill-slate-400 group-active:fill-slate-500"
      />
    </div>
  </button>
</div>
`;

exports[`[JSON.AddButton] should match initial snapshot 1`] = `
<div>
  <button
    class="absolute h-2 -mt-0.5 first:-mt-1.5 group opacity-0 hover:opacity-100"
    style="margin-left: 1rem; width: calc(100% - 1rem); z-index: 0;"
  >
    <div
      class="absolute left-0 right-0 h-0.5 -translate-y-1/2 bg-slate-300 group-hover:bg-slate-400 group-active:bg-slate-500"
    />
    <div
      class="absolute left-1/2 -translate-x-1/2 -translate-y-1/2 border rounded-sm bg-white border-slate-300 group-hover:border-slate-400 group-active:border-slate-500"
    >
      <svg
        class=" fill-slate-300  group-hover:fill-slate-400 group-active:fill-slate-500"
      />
    </div>
  </button>
</div>
`;
